@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9647] "Der skal laves en type for Fedora PID istedet for at indholde den i en streng."
    - bug [9701] "OwnerRelation.java generære ikke isMemberOfColection."
    - bug [9699] "Null Excaption in MarcxchangeWorkRelation_1.java"
    - bug [9676] "unødig while i PTIManager::void update()"
